<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="characters_bottom_naming">Characters</string>
    <string name="location_bottom_naming">Locations</string>
    <string name="episodes_bottom_naming">Episodes</string>

    <string name="progress">progress</string>
    <string name="image_of_character">Character Image</string>
    <string name="image_of_location">Location Image</string>
    <string name="characters_header_text">Characters</string>
    <string name="location_header_text">Locations</string>
    <string name="episodes_header_text">Episodes</string>
    <string name="search_button_description">search button</string>
    <string name="button_back_description">button back</string>
    <string name="picture_of_character_description">picture of character</string>
    <string name="characters_details_header_text">Character Detail</string>

    <string name="character_name">Name: %1$s</string>
    <string name="character_status">Status: %1$s</string>
    <string name="character_unknown_status">Status: ¯\\_(ツ)_/¯</string>
    <string name="character_species">Species: %1$s</string>
    <string name="character_type">Type: %1$s</string>
    <string name="character_type_null">Type: ¯\\_(ツ)_/¯</string>
    <string name="character_gender">Gender: %1$s</string>
    <string name="character_origin">Origin: %1$s</string>
    <string name="character_location">Location: %1$s</string>

    <string name="location_name">Name: %1$s</string>
    <string name="location_type">Type: %1$s</string>
    <string name="location_dimension_unknown">Dimension is unknown  ¯\\_(ツ)_/¯</string>

    <string name="character_information_header_text">Information:</string>
    <string name="character_episodes_header_text">Episodes:</string>
    <string name="characters_header_description_text">Characters:</string>
    <string name="residents_header_description_text">Residents:</string>

    <string name="episode_name">Name: %1$s</string>
    <string name="episode_number">Episode: %1$s</string>
    <string name="episode_air">Air Date: %1$s</string>
    <string name="episode_information_header_text">Episode Information:</string>
    <string name="location_information_header_text">Location Information:</string>
    <string name="image_for_details_episode_description">image_for_details_episode_description</string>
    <string name="no_internet_connection_message">No Internet Connection</string>
    <string name="characters_filter_header_text">Characters Filters</string>
    <string name="characters_filter_header_status_text">Status:</string>
    <string name="characters_filter_header_gender_text">Gender:</string>
    <string name="characters_filter_header_species_text">Species:</string>
    <string name="location_filter_header_text">Location Filters:</string>
    <string name="episode_filter_header_text">Episode Filters</string>
    <string name="episode_filters_header_species_text">Episodes:</string>
    <string name="enter_location_type_hint">Enter location type</string>
    <string name="enter_location_dimensions_hint">Enter location dimensions</string>
    <string name="apply_text">Apply</string>
    <string name="enter_characters_type_hint">Enter characters type</string>
    <string name="human_type">Human</string>
    <string name="alien_type">Alien</string>
    <string name="humanoid_type">Humanoid</string>
    <string name="unknown_type">Unknown</string>
    <string name="poopybutthole_type">Poopybutthole</string>
    <string name="mythological_creature_type">Mythological Creature</string>
    <string name="animal_type">Animal</string>
    <string name="robot_type">Robot</string>
    <string name="cronenberg_type">Cronenberg</string>
    <string name="disease_type">Disease</string>
    <string name="alive_status">Alive</string>
    <string name="dead_status">Dead</string>
    <string name="unknown_status">Unknown</string>
    <string name="female_gender">Female</string>
    <string name="male_gender">Male</string>
    <string name="genderless_gender">Genderless</string>
    <string name="unknown_gender">Unknown</string>
    <string name="s01e01">S01E01</string>
    <string name="s01e02">S01E02</string>
    <string name="s01e03">S01E03</string>
    <string name="s01e04">S01E04</string>
    <string name="s01e05">S01E05</string>
    <string name="s01e06">S01E06</string>
    <string name="s01e07">S01E07</string>
    <string name="s01e08">S01E08</string>
    <string name="s01e09">S01E09</string>
    <string name="s01e10">S01E10</string>
    <string name="s01e11">S01E11</string>
    <string name="s02e01">S02E01</string>
    <string name="s02e02">S02E02</string>
    <string name="s02e03">S02E03</string>
    <string name="s02e04">S02E04</string>
    <string name="s02e05">S02E05</string>
    <string name="s02e06">S02E06</string>
    <string name="s02e07">S02E07</string>
    <string name="s02e08">S02E08</string>
    <string name="s02e09">S02E09</string>
    <string name="s02e10">S02E10</string>
    <string name="s03e01">S03E01</string>
    <string name="s03e02">S03E02</string>
    <string name="s03e03">S03E03</string>
    <string name="s03e04">S03E04</string>
    <string name="s03e05">S03E05</string>
    <string name="s03e06">S03E06</string>
    <string name="s03e07">S03E07</string>
    <string name="s03e08">S03E08</string>
    <string name="s03e09">S03E09</string>
    <string name="s03e10">S03E10</string>
    <string name="s04e01">S04E01</string>
    <string name="s04e02">S04E02</string>
    <string name="s04e03">S04E03</string>
    <string name="s04e04">S04E04</string>
    <string name="s04e05">S04E05</string>
    <string name="s04e06">S04E06</string>
    <string name="s04e07">S04E07</string>
    <string name="s04e08">S04E08</string>
    <string name="s04e09">S04E09</string>
    <string name="s04e10">S04E10</string>
    <string name="s05e01">S05E01</string>
    <string name="s05e02">S05E02</string>
    <string name="s05e03">S05E03</string>
    <string name="s05e04">S05E04</string>
    <string name="s05e05">S05E05</string>
    <string name="s05e06">S05E06</string>
    <string name="s05e07">S05E07</string>
    <string name="s05e08">S05E08</string>
    <string name="s05e09">S05E09</string>
    <string name="s05e10">S05E10</string>
</resources>