<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:visibility="visible"
    app:behavior_peekHeight="@dimen/fill_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottom_sheet_line"
        android:layout_width="@dimen/bottom_sheet_line_width"
        android:layout_height="@dimen/bottom_sheet_line_height"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginTop="@dimen/bottom_sheet_line_margin_top"
        android:background="@color/sheet_holder_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name_filter_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:padding="@dimen/small_padding"
        android:text="@string/characters_filter_header_text"
        android:textColor="@color/extra_green"
        android:textSize="@dimen/header_text_view_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_line" />


    <ImageButton
        android:id="@+id/btn_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/search_button_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back_sheet"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_character_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_character_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_parent"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/enter_characters_type_hint"
        android:paddingTop="@dimen/standard_padding"

        android:textColorHint="@color/light_gray"
        app:boxBackgroundColor="?colorOnPrimary"
        app:boxStrokeColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="41"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:counterTextColor="@color/extra_green"
        app:endIconCheckable="true"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name_filter_screen">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_edit_text_character_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="text"
            android:padding="@dimen/standard_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_header_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:padding="@dimen/small_padding"
        android:text="@string/characters_filter_header_species_text"
        android:textColor="@color/extra_green"
        android:textSize="@dimen/header_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_character_type" />

    <HorizontalScrollView
        android:id="@+id/scrolled_chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_scroll_margin"
        android:layout_marginEnd="@dimen/horizontal_scroll_margin"
        app:layout_constraintStart_toStartOf="@+id/text_view_header_species"
        app:layout_constraintTop_toBottomOf="@+id/text_view_header_species">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="@dimen/chip_spacing_horizontal"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_human"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_alien"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alien_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_humanoid"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanoid_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_unknown"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_poopybutthole"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poopybutthole_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_mythological_creature"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mythological_creature_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_animal"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_robot"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_cronenberg"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cronenberg_type"
                app:chipBackgroundColor="@color/white_dark" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type_disease"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disease_type"
                app:chipBackgroundColor="@color/white_dark" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_view_header_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:padding="@dimen/small_padding"
        android:text="@string/characters_filter_header_status_text"
        android:textColor="@color/extra_green"
        android:textSize="@dimen/header_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrolled_chip" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/micro_margin"
        app:layout_constraintStart_toStartOf="@+id/text_view_header_status"
        app:layout_constraintTop_toBottomOf="@id/text_view_header_status"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alive"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive_status"
            app:chipBackgroundColor="@color/white_dark" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dead"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead_status"
            app:chipBackgroundColor="@color/white_dark" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_unknown_status"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_status"
            app:chipBackgroundColor="@color/white_dark" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/text_view_header_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:padding="@dimen/small_padding"
        android:text="@string/characters_filter_header_gender_text"
        android:textColor="@color/extra_green"
        android:textSize="@dimen/header_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_status" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/micro_margin"
        app:layout_constraintStart_toStartOf="@+id/text_view_header_status"
        app:layout_constraintTop_toBottomOf="@id/text_view_header_gender"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_female"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_gender"
            app:chipBackgroundColor="@color/white_dark" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_male"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_gender"
            app:chipBackgroundColor="@color/white_dark" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_genderless"

            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderless_gender"
            app:chipBackgroundColor="@color/white_dark" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_unknown_gender"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_gender"
            app:chipBackgroundColor="@color/white_dark" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="@dimen/fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/apply_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>
