<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:visibility="visible"
    app:behavior_peekHeight="@dimen/fill_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottom_sheet_line"
        android:layout_width="@dimen/bottom_sheet_line_width"
        android:layout_height="@dimen/bottom_sheet_line_height"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginTop="@dimen/bottom_sheet_line_margin_top"
        android:background="@color/sheet_holder_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name_filter_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:padding="@dimen/small_padding"
        android:text="@string/location_filter_header_text"
        android:textColor="@color/extra_green"
        android:textSize="@dimen/header_text_view_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_line" />


    <ImageButton
        android:id="@+id/btn_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/search_button_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back_sheet"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_location_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_location_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_parent"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/enter_location_type_hint"
        android:paddingTop="@dimen/standard_padding"

        android:textColorHint="@color/light_gray"
        app:boxBackgroundColor="?colorOnPrimary"
        app:boxStrokeColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="41"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:counterTextColor="@color/extra_green"
        app:endIconCheckable="true"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name_filter_screen">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_edit_text_location_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="text"
            android:padding="@dimen/standard_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_location_dimensions"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_parent"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/enter_location_dimensions_hint"
        android:paddingTop="@dimen/standard_padding"

        android:textColorHint="@color/light_gray"
        app:boxBackgroundColor="?colorOnPrimary"
        app:boxStrokeColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="41"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:counterTextColor="@color/extra_green"
        app:endIconCheckable="true"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_location_type">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_edit_text_character_dimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="text"
            android:padding="@dimen/standard_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="@dimen/fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/apply_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_location_dimensions" />
</androidx.constraintlayout.widget.ConstraintLayout>
