<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.fragments.episodes_details.DetailsEpisodesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_back_description_header"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/back_btn_margin"
                android:backgroundTintMode="add"
                android:contentDescription="@string/button_back_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/episode_information_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/episode_information_header_text"
                android:textColor="@color/extra_dark_green"
                android:textSize="@dimen/standard_text_size_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back_description_header" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/information_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_image_view_height"
                android:layout_margin="@dimen/card_view_margin"
                app:cardCornerRadius="@dimen/corner_radius_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/episode_information_header">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/image_episodes"
                    android:scaleType="centerCrop"
                    app:tintMode="src_over"
                    android:contentDescription="@string/image_for_details_episode_description"
                    app:tint="@color/white_dark" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/episode_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/color_under_text"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/small_margin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text_size"
                        tools:text="EPISODE NAME" />

                    <TextView
                        android:id="@+id/episode_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/color_under_text"
                        android:layout_margin="@dimen/small_margin"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text_size"
                        tools:text="EPISODE NUMBER" />

                    <TextView
                        android:id="@+id/episode_air"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_margin"
                        android:layout_gravity="center"
                        android:background="@color/color_under_text"
                        android:layout_marginStart="@dimen/micro_margin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text_size"
                        tools:text="AIR DATE" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/character_information_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/characters_header_description_text"
                android:textColor="@color/extra_dark_green"
                android:textSize="@dimen/standard_text_size_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/information_container" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/characters_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_for_recycler"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_information_header"
                app:spanCount="2"
                tools:itemCount="50"
                tools:listitem="@layout/item_characters" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

